Replace http links to https

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -11,7 +11,7 @@
 	<meta name="keywords"
 		content="bitcoin wallet, protect privacy, wallet, bitcoin mining, bitcoin worth, bitcoin privacy, exchange, store, bitcoin, privacy policy, financial privacy, blockchain, transparent, opensource, crypto, cryptocurrency, currency" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="libs/css/jsplumbtoolkit-defaults.css" />
@@ -119,7 +119,7 @@
 					<p class="card-text">
 						zkSNACKs’ flagship product is a privacy oriented Bitcoin wallet, called the Wasabi
 						Wallet. <br>
-						<a class="go-to" href="http://wasabiwallet.io">Go to website.</a>
+						<a class="go-to" href="https://wasabiwallet.io">Go to website.</a>
 					</p>
 
 				</div>
@@ -169,7 +169,7 @@
 							<img class="svg-icon mb-0" alt="Lightning Network integration" src="assets/interface.svg">
 							<div class="card-body development-card-body">
 								Wasabi Wallet listed on <a class="bitcoin-anonymous" href="https://bitcoin.org/" target="_blank">
-									http://bitcoin.org </a>
+									https://bitcoin.org </a>
 							</div>
 						</div>
 					</div>
@@ -279,7 +279,7 @@
 									alt="Bitcoin-Insight" loading="lazy">
 							</a>
 							<a class="slide"
-								href="http://www.bitcoin-insight.com/privacy-focused-bitcoin-wallet-wasabi-launches-beta-version-on-uasf-anniversary/"
+								href="https://www.bitcoin-insight.com/privacy-focused-bitcoin-wallet-wasabi-launches-beta-version-on-uasf-anniversary/"
 								target="_blank" rel="external nofollow"> <img src="assets/client-logos/btc_manager.png" alt="btc_manager" loading="lazy">
 							</a>
 							<a class="slide"
