Optimize images and videos
Optimize images

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -60,7 +60,7 @@
 		</ul>
 		<div class="banner-section" id="about">
 			<video poster="./assets/bg2_video_poster.png" autoplay muted loop preload="auto">
-				<source src="assets/bg2.webm" type="video/webm" />
+				<source src="assets/bg2.mp4" type="video/mp4" />
 			</video>
 
 			<div class="jumbotron jumbotron-fluid">
