--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -6,7 +6,7 @@
 	<meta name="description" content="Nowadays it is all about individuals’ digital privacy, governments and organisations are making steps to protect privacy in the digital world. We believe that privacy is both a fundamental human right and business need that should be preserved at all times. This is why we focus on your digital financial privacy." />
 	<meta name="keywords" content="bitcoin wallet, protect privacy, wallet, bitcoin mining, bitcoin worth, bitcoin privacy, exchange, store, bitcoin, privacy policy, financial privacy, blockchain, transparent, opensource, crypto, cryptocurrency, currency" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
 	<link href="https://fonts.googleapis.com/css?family=Nunito&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="style.css" />
 	<link rel="stylesheet" href="libs/css/jsplumbtoolkit-defaults.css" />
