--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,21 +3,21 @@
 <head>
 	<title>zkSNACKs - Unfairly Private</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="Nowadays it is all about individuals’ digital privacy, governments and organisations are making steps to protect privacy in the digital world. We believe that privacy is both a fundamental human right and business need that should be preserved at all times. This is why we focus on your digital financial privacy." />
+	<meta name="description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhacements. It's main product is Wasabi, a Bitcoin privacy-oriented wallet." />
 	<meta name="keywords" content="bitcoin wallet, protect privacy, wallet, bitcoin mining, bitcoin worth, bitcoin privacy, exchange, store, bitcoin, privacy policy, financial privacy, blockchain, transparent, opensource, crypto, cryptocurrency, currency" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Open Graph / Facebook -->
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://zksnacks.com/">
 	<meta property="og:title" content="zkSNACKs - Unfairly Private">
-	<meta property="og:description" content="Nowadays it is all about individuals’ digital privacy, governments and organisations are making steps to protect privacy in the digital world. We believe that privacy is both a fundamental human right and business need that should be preserved at all times. This is why we focus on your digital financial privacy.">
+	<meta property="og:description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhacements. It's main product is Wasabi, a Bitcoin privacy-oriented wallet.">
 	<meta property="og:image" content="https://zksnacks.com/assets/zksnacks.png">
 	<meta property="og:site_name" content="zkSNACKs - Unfairly Private">
 	<!-- Twitter -->
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://zksnacks.com/">
 	<meta property="twitter:title" content="zkSNACKs - Unfairly Private">
-	<meta property="twitter:description" content="Nowadays it is all about individuals’ digital privacy, governments and organisations are making steps to protect privacy in the digital world. We believe that privacy is both a fundamental human right and business need that should be preserved at all times. This is why we focus on your digital financial privacy.">
+	<meta property="twitter:description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhacements. It's main product is Wasabi, a Bitcoin privacy-oriented wallet.">
 	<meta property="twitter:image" content="https://zksnacks.com/assets/zksnacks.png">
 	<!-- End Social Optimization -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
