Fix zksnacks' logo (json structured data)

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -40,7 +40,7 @@
 			"@type": "Corporation",
 			"name": "zkSNACKs",
 			"url": "https://zksnacks.com",
-			"logo": "https://zksnacks.com/assets/zksnacks-logo.png",
+			"logo": "https://zksnacks.com/assets/zksnacks.png",
 				"contactPoint": [
 		{
 			"@type": "ContactPoint",
