--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="en">
 <head>
 	<title>zkSNACKs - Unfairly Private</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
