--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -305,16 +305,16 @@
 				<a class="nav-link" href="#about" title="About zkSNACKs">About</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#mission" title"zkSNACKs' mission">Mission</a>
+				<a class="nav-link" href="#mission" title="zkSNACKs' mission">Mission</a>
 			</li>
 			<li class="nav-item">
 				<a class="nav-link" href="#development" title="zkSNACKs' development">We are proud of</a>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" href="#contact" title"Contact zkSNACKs">Contact</a>
+				<a class="nav-link" href="#contact" title="Contact zkSNACKs">Contact</a>
 			</li>
 			<li class="nav-item dropdown">
-				<a class="nav-link" href="#" title"Menu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+				<a class="nav-link" href="#" title="Menu" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
 					<img class="menu-icon" src="assets/menu.svg" alt="Menu" title="Menu">
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -322,7 +322,7 @@
 					<a class="dropdown-item" href="#mission" title="zkSNACKs' mission">Mission</a>
 					<a class="dropdown-item" href="#development" title="zkSNACKs' development">We are proud of</a>
 					<a class="dropdown-item" href="#contact" title="Contact zkSNACKs">Contact</a>
-					<a class="dropdown-item-highlighted" href="#product" title"Wasabi Wallet"><span>Wasabi</span></a>
+					<a class="dropdown-item-highlighted" href="#product" title="Wasabi Wallet"><span>Wasabi</span></a>
 				</div>
 			</li>
 			<li class="highlighted-menu">
@@ -345,7 +345,7 @@
 		<div class="colour-block" id="mission">
 			<h2 class="card-title underline-title mb-4">Mission</h2>
 			<p class="card-text text-center">zkSNACKs was established to research the possibilities for Bitcoin fungibility enhancements and provide different products ensuring the desired privacy.
-				<a class="bitcoin-anonymous" href="https://bitcoin.org/en/protect-your-privacy" title"Bitcoin anonimity">Many believes that Bitcoin is anonymous </a> but in reality the Blockchain is transparent.
+				<a class="bitcoin-anonymous" href="https://bitcoin.org/en/protect-your-privacy" title="Bitcoin anonimity">Many believes that Bitcoin is anonymous </a> but in reality the Blockchain is transparent.
 			</p>
 			<p class="card-mission text-center">
 				Our mission is to equip you with powerful tools to secure your privacy.
@@ -353,7 +353,7 @@
 		</div>
 		<div class="white-block" id="product">
 			<div class="product-container m-auto h-100 text-center">
-				<img class="m-auto" alt="Wasabi Wallet" src="assets/wasabi_wallet.png" alt="Wasabi Wallet logo" title="Wasabi Wallet logo" style="width:235px">
+				<img class="m-auto" src="assets/wasabi_wallet.png" alt="Wasabi Wallet logo" title="Wasabi Wallet logo" style="width:235px">
 				<div class="card-body">
 					<p class="card-text">
 						zkSNACKs’ flagship product is a privacy oriented Bitcoin wallet, called the Wasabi Wallet. <br>
