--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>zkSNACKs - Unfairly Private</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-	<meta name="description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhacements. It's main product is Wasabi, a Bitcoin privacy-oriented wallet." />
+	<meta name="description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhancements. Its main product is Wasabi Wallet, a Bitcoin privacy-oriented wallet." />
 	<meta name="keywords" content="bitcoin wallet, protect privacy, wallet, bitcoin mining, bitcoin worth, bitcoin privacy, exchange, store, bitcoin, privacy policy, financial privacy, blockchain, transparent, opensource, crypto, cryptocurrency, currency" />
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Open Graph / Facebook -->
