--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -10,7 +10,7 @@
 	<meta property="og:type" content="website">
 	<meta property="og:url" content="https://zksnacks.com/">
 	<meta property="og:title" content="zkSNACKs - Unfairly Private">
-	<meta property="og:description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhacements. It's main product is Wasabi, a Bitcoin privacy-oriented wallet.">
+	<meta property="og:description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhancements. Its main product is Wasabi Wallet, a Bitcoin privacy-oriented wallet.">
 	<meta property="og:image" content="https://zksnacks.com/assets/zksnacks.png">
 	<meta property="og:site_name" content="zkSNACKs - Unfairly Private">
 	<!-- Twitter -->
