--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -17,7 +17,7 @@
 	<meta property="twitter:card" content="summary_large_image">
 	<meta property="twitter:url" content="https://zksnacks.com/">
 	<meta property="twitter:title" content="zkSNACKs - Unfairly Private">
-	<meta property="twitter:description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhacements. It's main product is Wasabi, a Bitcoin privacy-oriented wallet.">
+	<meta property="twitter:description" content="zkSNACKs was established to research the possibilities for Bitcoin privacy enhancements. Its main product is Wasabi Wallet, a Bitcoin privacy-oriented wallet.">
 	<meta property="twitter:image" content="https://zksnacks.com/assets/zksnacks.png">
 	<!-- End Social Optimization -->
 	<link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700,500,900' rel='stylesheet' type='text/css'>
