--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -356,7 +356,7 @@
 				<img class="m-auto" src="assets/wasabi_wallet.png" alt="Wasabi Wallet logo" title="Wasabi Wallet logo" style="width:235px">
 				<div class="card-body">
 					<p class="card-text">
-						zkSNACKs’ flagship product is a privacy oriented Bitcoin wallet, called the Wasabi Wallet. <br>
+						zkSNACKs' flagship product is a privacy oriented Bitcoin wallet, called Wasabi Wallet. <br>
 						<a class="go-to" href="https://wasabiwallet.io" title="Wasabi Wallet website">Go to website.</a>
 					</p>
 				</div>
