--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -336,7 +336,7 @@
 			<div class="jumbotron jumbotron-fluid">
 				<div class="container">
 					<div class="mb-4"><img src="assets/zksnacks-logo-white.png" alt="zkSNACKs Logo" title="zkSNACKS Logo" style="width: 425px"> </div>
-					<p class="lead">Nowadays it is all about individuals’ <strong>digital privacy</strong>, governments and organisations are making steps to <strong>protect privacy in the digital world</strong>. We believe that privacy is both a fundamental human right and business need that should be preserved at all times. This is why <strong>we focus on your digital financial privacy</strong>.
+					<p class="lead">Nowadays it is all about individuals' <strong>digital privacy</strong>, governments and organisations are making steps to <strong>protect privacy in the digital world</strong>. We believe that privacy is both a fundamental human right and business need that should be preserved at all times. This is why <strong>we focus on your digital financial privacy</strong>.
 					</p>
 				</div>
 			</div>
