Link to wasabi download stats

--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -414,7 +414,7 @@
 						<div class="card development-card h-100 px-2 py-3">
 							<img class="svg-icon mb-0" src="assets/file.svg" alt="Wasabi downloads" title="Wasabi downloads">
 							<div class="card-body development-card-body">
-								Approximately 200,000 Wasabi downloads
+								More than <a href="https://somsubhra.com/github-release-stats/?username=zksnacks&repository=WalletWasabi" title="Wasabi Wallet downloads" alt="Wasabi Wallet downloads">200,000 Wasabi downloads</a>
 							</div>
 						</div>
 					</div>
