--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -41,14 +41,11 @@
 		"name": "zkSNACKs",
 		"url": "https://zksnacks.com",
 		"logo": "https://zksnacks.com/assets/zksnacks.png",
-		"contactPoint": [
-			{
-				"@type": "ContactPoint",
-				"telephone": "",
-				"contactType": "customer service",
-				"email": "info@zksnacks.com"
-			}
-		],
+		"contactPoint": [{
+			"@type": "ContactPoint",
+			"contactType": "customer service",
+			"email": "info@zksnacks.com"
+		}],
 		"sameAs": [
 			"https://twitter.com/Zksnacks_LTD",
 			"https://www.linkedin.com/company/zksnacks/",
@@ -56,8 +53,8 @@
 			"https://www.crunchbase.com/organization/wasabi-wallet"
 		]
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -73,9 +70,9 @@
 			"@type": "Organization",
 			"name": "zkSNACKs"
 		}
-		}
-	</script>
-	<script type="application/ld+json">
+	}
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -85,15 +82,15 @@
 		"sameAs": [
 			"https://twitter.com/bharmat84",
 			"https://www.linkedin.com/in/balintharmat//"
-	],
-	"jobTitle": "CEO",
-	"worksFor": {
-		"@type": "Organization",
-		"name": "zkSNACKs"
-		}  
+		],
+		"jobTitle": "CEO",
+		"worksFor": {
+			"@type": "Organization",
+			"name": "zkSNACKs"
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -109,10 +106,10 @@
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -123,15 +120,15 @@
 			"https://twitter.com/lontivero",
 			"https://www.linkedin.com/in/lucasontivero/",
 			"https://github.com/lontivero"
-	],
+		],
 		"jobTitle": "Lead Engineer",
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -146,10 +143,10 @@
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -164,10 +161,10 @@
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -182,10 +179,10 @@
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -200,10 +197,10 @@
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -218,10 +215,10 @@
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -236,10 +233,10 @@
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type="application/ld+json">
+		</script>
+		<script type="application/ld+json">
 	{
 		"@context": "https://schema.org/",
 		"@type": "Person",
@@ -254,33 +251,33 @@
 		"worksFor": {
 			"@type": "Organization",
 			"name": "zkSNACKs"
-		}  
+		}
 	}
-	</script>
-	<script type='application/ld+json'>
-		{
-			"@context": "https://schema.org/",
-			"@type": "SoftwareApplication",
-			"applicationCategory": "FinanceApplication",
-			"name": "Wasabi Wallet",
-			"image": "https://zksnacks.com/assets/wasabi_wallet.png",
-			"availableOnDevice": "Desktop",
-			"author": {
-				"@type": "Organization",
-				"url": "https://zksnacks.com",
-				"name": "zkSNACKs",
-				"sameAs": [
-					"https://twitter.com/Zksnacks_LTD",
-					"https://www.linkedin.com/company/zksnacks/",
-					"https://github.com/zkSNACKs"
-					]
+		</script>
+		<script type='application/ld+json'>
+	{
+		"@context": "https://schema.org/",
+		"@type": "SoftwareApplication",
+		"applicationCategory": "FinanceApplication",
+		"name": "Wasabi Wallet",
+		"image": "https://zksnacks.com/assets/wasabi_wallet.png",
+		"availableOnDevice": "Desktop",
+		"author": {
+			"@type": "Organization",
+			"url": "https://zksnacks.com",
+			"name": "zkSNACKs",
+			"sameAs": [
+				"https://twitter.com/Zksnacks_LTD",
+				"https://www.linkedin.com/company/zksnacks/",
+				"https://github.com/zkSNACKs"
+			]
 		},
 		"downloadUrl": "https://wasabiwallet.io/#download",
 		"operatingSystem": [
 			"Windows",
 			"Linux",
 			"macOS"
-			],
+		],
 		"releaseNotes": "https://github.com/zkSNACKs/WalletWasabi/releases",
 		"screenshot": "https://wasabiwallet.io/images/wasabi-wallet-laptop.png",
 		"softwareVersion": "1.1.12",
@@ -293,8 +290,8 @@
 			"@type": "Offer",
 			"price": "0",
 			"priceCurrency": "BTC"
-			}
 		}
+	}
 	</script>
 	<!-- End of Schema.org JSON-LD Markup for Search Engine Optimization -->
 </head>
