--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -135,7 +135,7 @@
 		<div class="colour-block" id="mission">
 			<h2 class="card-title underline-title mb-4">Mission</h2>
 			<p class="card-text text-center">zkSNACKs was established to research the possibilities for Bitcoin fungibility enhancements and provide different products ensuring the desired privacy.
-				<a class="bitcoin-anonymous" href="https://bitcoin.org/en/protect-your-privacy" title="Bitcoin anonimity">Many believes that Bitcoin is anonymous </a> but in reality the Blockchain is transparent.
+				<a class="bitcoin-anonymous" href="https://bitcoin.org/en/protect-your-privacy" title="Bitcoin anonimity">Many believe that Bitcoin is anonymous </a> but in reality the Blockchain is transparent.
 			</p>
 			<p class="card-mission text-center">
 				Our mission is to equip you with powerful tools to secure your privacy.
