--- a/wwwroot/index.html
+++ b/wwwroot/index.html
@@ -215,7 +215,8 @@
 			Legal notice:
 			<a class="go-to ml-1 mr-1" href="/assets/privacypolicy.txt" title="zkSNACKs' privacy policy" target="_blank"><span style="font-weight: 400;">Privacy policy</span></a>
 			<span class="go-to"> | </span>
-			<a class="go-to ml-1" href="mailto:legal@zksnacks.com" title="zkSNACKs' legal email" target="_blank"><span style="font-weight: 400;">Legal issues</span></a>
+			<a class="go-to ml-1" href="mailto:legal@zksnacks.com" title="zkSNACKs' legal email" target="_blank"><span style="font-weight: 400;">Legal issues</span></a> 
+			6.20 World Trade Center, 6. Bayside Road, Gibraltar, GX11 1AA
 		</footer>
 		<script>
 			let isTriggered = false;
