--- a/coinjoin-api/index.html
+++ b/coinjoin-api/index.html
@@ -13,10 +13,10 @@
     
 		<link href="../_app/immutable/assets/0.CjDTcK0j.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/3.Dvhepuve.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.g84U1FZe.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.Ca2G_ECy.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.Bk-emvWB.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.Dft-Vkmd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.DlrVKB8M.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.D1KLBXtY.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.C0IcoDcQ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.DM2v-VzI.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.Dsa8yFNL.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/content.ERplVPw8.js">
@@ -96,7 +96,7 @@
 			
 			<script>
 				{
-					__sveltekit_wgvfee = {
+					__sveltekit_182ibcr = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -105,8 +105,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.g84U1FZe.js"),
-						import("../_app/immutable/entry/app.D1KLBXtY.js")
+						import("../_app/immutable/entry/start.Bk-emvWB.js"),
+						import("../_app/immutable/entry/app.C0IcoDcQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
