--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     />
     <meta name="viewport" content="width=device-width" />
     
-		<link rel="modulepreload" href="/_app/immutable/entry/start.g84U1FZe.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Ca2G_ECy.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.Bk-emvWB.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dft-Vkmd.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DlrVKB8M.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.D1KLBXtY.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.C0IcoDcQ.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DM2v-VzI.js">
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">
 			<script>
 				{
-					__sveltekit_wgvfee = {
+					__sveltekit_182ibcr = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.g84U1FZe.js"),
-						import("/_app/immutable/entry/app.D1KLBXtY.js")
+						import("/_app/immutable/entry/start.Bk-emvWB.js"),
+						import("/_app/immutable/entry/app.C0IcoDcQ.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
