deploy: 150cdefec961be0bc26ade585739cb921b2af674

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     />
     <meta name="viewport" content="width=device-width" />
     
-		<link rel="modulepreload" href="/_app/immutable/entry/start.Bk-emvWB.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Dft-Vkmd.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.tw4qg2WS.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.uS2eiZg_.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DlrVKB8M.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.C0IcoDcQ.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.BdXhW7lh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DM2v-VzI.js">
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">
 			<script>
 				{
-					__sveltekit_182ibcr = {
+					__sveltekit_f7bvcq = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.Bk-emvWB.js"),
-						import("/_app/immutable/entry/app.C0IcoDcQ.js")
+						import("/_app/immutable/entry/start.tw4qg2WS.js"),
+						import("/_app/immutable/entry/app.BdXhW7lh.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
