deploy: f663880bdaef50d998bbb637600eeb0f6c537d01

--- a/index.html
+++ b/index.html
@@ -11,25 +11,25 @@
     />
     <meta name="viewport" content="width=device-width" />
     
-		<link rel="modulepreload" href="/_app/immutable/entry/start.tw4qg2WS.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.uS2eiZg_.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BBWYj32n.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.DZHn0J2X.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.DlrVKB8M.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.BdXhW7lh.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.DfDUrMKY.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.DM2v-VzI.js">
   </head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents">
 			<script>
 				{
-					__sveltekit_f7bvcq = {
+					__sveltekit_1sclwfs = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.tw4qg2WS.js"),
-						import("/_app/immutable/entry/app.BdXhW7lh.js")
+						import("/_app/immutable/entry/start.BBWYj32n.js"),
+						import("/_app/immutable/entry/app.DfDUrMKY.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
