--- a/coinjoin-api/index.html
+++ b/coinjoin-api/index.html
@@ -13,10 +13,10 @@
     
 		<link href="../_app/immutable/assets/0.CjDTcK0j.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/3.Dvhepuve.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.tw4qg2WS.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.uS2eiZg_.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.BBWYj32n.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.DZHn0J2X.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.DlrVKB8M.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.BdXhW7lh.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.DfDUrMKY.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.DM2v-VzI.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/0.Dsa8yFNL.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/content.ERplVPw8.js">
@@ -96,7 +96,7 @@
 			
 			<script>
 				{
-					__sveltekit_f7bvcq = {
+					__sveltekit_1sclwfs = {
 						base: new URL("..", location).pathname.slice(0, -1)
 					};
 
@@ -105,8 +105,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.tw4qg2WS.js"),
-						import("../_app/immutable/entry/app.BdXhW7lh.js")
+						import("../_app/immutable/entry/start.BBWYj32n.js"),
+						import("../_app/immutable/entry/app.DfDUrMKY.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
