--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ZkSnacks</title>
+    <title>zkSNACKs</title>
     <style>
       body {
         font-family: helvetica;
+        background: #111;
+        color: #fff;
       }
       .box {
         width: 100%;
@@ -38,7 +40,7 @@
       >
         <style type="text/css">
           .st0 {
-            fill: #000;
+            fill: #fff;
           }
         </style>
         <g>
